# climate-dashboard

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  app.py  pyproject.toml
.github/workflows/: publish.yaml
assets/: styles.css
client/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts
client/public/assets/: SingaporeNDCSummary.txt  Singapore_1NDC_2Update_Summary.md  Singapore_2NDC_Summary.md  Singapore_2NDC_Summary.txt  Singapore_BTR_Summary.md
client/public/assets/summaries/: gst_summary.md
client/public/assets/wmo_reports_pdf_summary/: 2020-2024_overall_summary.md  overall_summary.md  wmo_2020.md  wmo_2021.md  wmo_2022.md  wmo_2023.md  wmo_2024.md
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/app/btr/: page.tsx
client/src/app/local/: page.tsx
client/src/app/ndc/: page.tsx
client/src/app/trends/: page.tsx
client/src/app/wmo/: page.tsx
client/src/components/: CTA.tsx  Hero.tsx  chat.tsx  data-graphs.tsx  footer.tsx  images-section.tsx  landing-page-header.tsx  logo.tsx  markdown.tsx  message.tsx  multimodal-input.tsx  ndc-tracker.tsx  news-sentiment.tsx  overview.tsx  simplified-section.tsx
client/src/components/ui/: input.tsx  markdown-renderer.tsx
client/src/lib/: utils.ts
data/: list_of_countries.csv
notebooks/: ndc_multi_document_agents.ipynb  plot_data_graphs.ipynb  plot_graphs_excel.ipynb  test_btr_pdf.ipynb
server/: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  fastapi_app.py  fly.toml  pyproject.toml  ruff.toml
server/.github/workflows/: publish.yaml
server/notebooks/: get_cat_graph.ipynb  ndc_multi_document_agents.ipynb  plot_earthkit.ipynb  test_btr_pdf.ipynb
server/src/: btr.py  cache.py  config.yaml  future_projection.py  ndc_inference.py  news_sentiment.py  plot_graphs.py  process_data.py  prompts.yaml  scheduler.py  typing.py  utils.py
server/src/report_summaries/: copernicus.md  ipcc.md  wmo.md
src/: btr.py  config.yaml  ndc_inference.py  plot_graphs.py  utils.py
