[tool.poetry]
name = "climate-dashboard"
version = "0.1.5"
description = "A Climate Crisis Dashboard"
authors = ["Jovinder Singh <jovinder@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pyyaml = "^6.0.2"
ruff = "^0.5.7"
matplotlib = "^3.9.2"
uvicorn = "^0.30.6"
fastapi = "^0.114.2"
llama-index-agent-openai = "^0.4.0"
llama-index-embeddings-openai = "^0.3.0"
llama-index-llms-openai = "^0.3.0"
llama-index = "^0.12.14"
python-dotenv = "^1.0.1"
# streamlit = "^1.37.1"
# https://download.pytorch.org/whl/torch/
torch = [
    {platform = "darwin", url = "https://download.pytorch.org/whl/cpu/torch-2.6.0-cp312-none-macosx_11_0_arm64.whl"},
    {platform = "linux", url = "https://download.pytorch.org/whl/cpu/torch-2.6.0%2Bcpu-cp312-cp312-linux_x86_64.whl"},
]
sentence-transformers = "^3.4.1"


# Development dependencies are packages that are needed for development
# purposes but are not required for the production environment
duckduckgo-search = "^7.5.0"
[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
