[project]
name = "climate-dashboard"
version = "0.2.0"
description = "A Climate Crisis Dashboard"
authors = [{name = "Jovinder Singh", email = "jovinder@yahoo.com"}]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyyaml>=6.0.2",
    "matplotlib>=3.9.2",
    "uvicorn>=0.30.6",
    "fastapi>=0.114.2",
    "llama-index-agent-openai>=0.4.0",
    "llama-index-embeddings-openai>=0.3.0",
    "llama-index-llms-openai>=0.3.0",
    "llama-index>=0.12.14",
    "python-dotenv>=1.0.1",
    "duckduckgo-search>=7.5.0",
    "sentence-transformers>=3.4.1",
    # https://download.pytorch.org/whl/torch/
    "torch>=2.6.0",
]

# Development dependencies are packages that are needed for development
# purposes but are not required for the production environment
[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "streamlit>=1.37.1",
    "ruff>=0.5.7",
]

[tool.uv]
# https://download.pytorch.org/whl/torch/
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    {index = "pytorch-cpu", marker = "sys_platform == 'darwin'"},
    {index = "pytorch-cpu", marker = "sys_platform == 'linux'"},
]

